[package]
name = "gaea"
version = "0.1.0"
authors = ["hnts"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-gaea.json"
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio",
     "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300


[dependencies]
bootloader = { version = "0.6.0", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.0"
x86_64 = "0.6.0"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"
linked_list_allocator = "0.6.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "panic_handler"
harness = false

[[test]]
name = "stack_overflow"
harness = false
